--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -5,7 +5,7 @@
       "display_url": "867-5309.alanwsmith.com",
       "url": "https://867-5309.alanwsmith.com",
       "description": [
-        "Quick link for the classic number. Can't belive someone owns 867-5309.com and isn't doing this with it."
+        "Quick link for the classic number. Can't belive someone owns 867-5309.com and isn't doing this with it. The main point of the page is to experiment with a technique for having a blurred background based off the video that's playing."
       ]
     },
     { 
