--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -6,6 +6,14 @@
   ],
   "links": [
     {
+      "name": "All Work And No Play Notecards",
+      "display_url": "working.alanwsmith.com/",
+      "url": "https://working.alanwsmith.com/",
+      "description": [
+        "Another tribute to Jack Torrance. This time with notecards"
+      ]
+    },
+    {
       "name": "Multi-Player",
       "display_url": "multi-player.alanwsmith.com/",
       "url": "https://multi-player.alanwsmith.com/",
