--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -6,6 +6,14 @@
   ],
   "links": [
     {
+      "name": "My Website Manifesto",
+      "display_url": "alanwsmith.com",
+      "url": "https://www.alanwsmith.com/en/2v/xa/cn/vj/",
+      "description": [
+        "Figure it's time to put down my thoughts on how to make the web a better place."
+      ]
+    },
+    {
       "name": "All Work And No Play",
       "display_url": "working.alanwsmith.com",
       "url": "https://working.alanwsmith.com/",
