--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -10,7 +10,7 @@
       "display_url": "color-palettes.alanwsmith.com",
       "url": "https://color-palettes.alanwsmith.com",
       "description": [
-        "An early attempt at making a color picker. It has a ton of palettes and auto generate styles based on them."
+        "An early attempt at making a color picker. It has a ton of palettes and auto generate styles based on them. Click base palettes in the sidebard. Then shuffle what they apply to with the boxes up top. "
       ]
     },
     {
