Added itty-js and bitty-js

--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -6,6 +6,22 @@
   ],
   "links": [
     {
+      "name": "bitty-js",
+      "display_url": "bitty-js.alanwsmith.com",
+      "url": "https://bitty-js.alanwsmith.com",
+      "description": [
+        "A tiny web component. It makes web pages reactive. Designed for progressive enhancement."
+      ]
+    },
+    {
+      "name": "itty-js",
+      "display_url": "itty-js.alanwsmith.com",
+      "url": "https://itty-js.alanwsmith.com",
+      "description": [
+        "A (future) framework built on bitty-js"
+      ]
+    },
+    {
       "name": "How To Grow Your Digital Garden With Subdomains",
       "display_url": "subdomains.alanwsmith.com",
       "url": "https://subdomains.alanwsmith.com",
